--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,51 @@ h1, h3 {
     background-color: #007bff;
     border-color: #007bff;
 }
+@page { size: 6cm 4.5cm; margin: 0; }
+body, html { margin: 0; padding: 0; }
+.label {
+    width: 6cm;
+    height: 4.5cm;
+    border: 0.3px solid #000;
+    position: relative;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    overflow: hidden; /* Taşmayı önler */
+}
+
+
+.label-top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.company-name {
+    font-size: 14pt;
+    font-weight: bold;
+    margin-left: 0.2px;
+}
+
+.product-code,
+.product-name {
+    font-size: 10pt;
+    margin-top: 0.1cm;
+    margin-left: 0.2px;
+}
+
+.label-bottom-right {
+    position: absolute;
+    bottom: 0.2cm;
+    right: 0.2cm;
+}
+
+.qr-border {
+    border: 0px solid #000;
+    padding: 0.1cm;
+    display: inline-block;
+}
+
+#labelQRCode canvas {
+    width: 100% !important;
+    height: 100% !important;
+}
